Added: Notifications when alarm is set
Whoop whoop!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
 
     <string name="calendar_id">Calendar id</string>
     <string name="calendar_selected">Calendar selected</string>
+    <string name="notification_title">AutoAlarm - Alarm set!</string>
 </resources>
